--- a/swaggertest/src/main/resources/application.properties
+++ b/swaggertest/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #Database
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@172.18.85.161:1521:xe
-spring.datasource.username=dm
-spring.datasource.password=dm
+#spring.datasource.url=jdbc:oracle:thin:@172.18.85.161:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@192.168.8.144:1521:DEVDGNS
+spring.datasource.username=CYBERUSER
+spring.datasource.password=CYBERUSER
 
 #port
 server.port=7071
